--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <h1>CHECKERS</h1>
+   
+</head>
+<body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkers Game</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
     <div id="board"></div>
     <script src="script.js"></script>
 </body>
