--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <h1>CHECKERS</h1>
-   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkers Game</title>
-    <link rel="stylesheet" href="styles.css">
     <div id="board"></div>
     <script src="script.js"></script>
 </body>
