--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <h1>CHECKERS</h1>
+    <h3>take turns clicking on a piece and then clicking on the desired endpoint of it to move it.</h3>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkers Game</title>
